LOFI VALLEY ENGINE OPEN!

--- a/en/index.html
+++ b/en/index.html
@@ -511,50 +511,55 @@
 
         <!-- Footer -->
         <footer class="text-center space-y-6 slide-up">
-          <button
-            disabled
-            class="relative inline-flex items-center gap-4 px-20 py-7 rounded-full text-xl font-semibold tracking-wide cursor-not-allowed overflow-hidden shadow-[0_12px_48px_rgba(139,123,168,0.5)] border-2 border-valley-purple/50"
+          <a
+            href="https://dev.lofivalley.com/"
+            class="relative inline-flex items-center gap-4 px-20 py-7 rounded-full text-xl font-semibold tracking-wide overflow-hidden shadow-[0_12px_48px_rgba(139,123,168,0.7)] border-2 border-valley-lavender/60 transition-all duration-300 hover:scale-105 hover:shadow-[0_16px_64px_rgba(139,123,168,0.9)]"
+            style="
+              background: linear-gradient(
+                135deg,
+                #8b7ba8 0%,
+                #b5a5c9 50%,
+                #a8c5a5 100%
+              );
+            "
           >
-            <span class="relative z-10 text-valley-cream/70">✦</span>
-            <span class="relative z-10 text-valley-cream/70">
+            <span class="relative z-10 text-valley-cream drop-shadow-lg"
+              >✦</span
+            >
+            <span class="relative z-10 text-valley-cream drop-shadow-lg">
               Enter the valley
             </span>
-            <span class="relative z-10 text-valley-cream/70">✦</span>
-          </button>
+            <span class="relative z-10 text-valley-cream drop-shadow-lg"
+              >✦</span
+            >
+          </a>
 
           <p
             class="text-sm text-valley-sand/60 tracking-[0.3em] uppercase letter-pop-container"
           >
-            <span class="letter-pop" style="animation-delay: 1.8s">T</span
-            ><span class="letter-pop" style="animation-delay: 1.85s">h</span
-            ><span class="letter-pop" style="animation-delay: 1.9s">e</span
-            ><span class="letter-pop" style="animation-delay: 1.95s"
+            <span class="letter-pop" style="animation-delay: 1.8s">W</span
+            ><span class="letter-pop" style="animation-delay: 1.85s">e</span
+            ><span class="letter-pop" style="animation-delay: 1.9s">l</span
+            ><span class="letter-pop" style="animation-delay: 1.95s">c</span
+            ><span class="letter-pop" style="animation-delay: 2s">o</span
+            ><span class="letter-pop" style="animation-delay: 2.05s">m</span
+            ><span class="letter-pop" style="animation-delay: 2.1s">e</span
+            ><span class="letter-pop" style="animation-delay: 2.15s"
               >&nbsp;</span
-            ><span class="letter-pop" style="animation-delay: 2s">g</span
-            ><span class="letter-pop" style="animation-delay: 2.05s">a</span
-            ><span class="letter-pop" style="animation-delay: 2.1s">t</span
-            ><span class="letter-pop" style="animation-delay: 2.15s">e</span
-            ><span class="letter-pop" style="animation-delay: 2.2s">s</span
-            ><span class="letter-pop" style="animation-delay: 2.25s"
-              >&nbsp;</span
-            ><span class="letter-pop" style="animation-delay: 2.3s">w</span
-            ><span class="letter-pop" style="animation-delay: 2.35s">i</span
-            ><span class="letter-pop" style="animation-delay: 2.4s">l</span
-            ><span class="letter-pop" style="animation-delay: 2.45s">l</span
+            ><span class="letter-pop" style="animation-delay: 2.2s">t</span
+            ><span class="letter-pop" style="animation-delay: 2.25s">o</span
+            ><span class="letter-pop" style="animation-delay: 2.3s">&nbsp;</span
+            ><span class="letter-pop" style="animation-delay: 2.35s">t</span
+            ><span class="letter-pop" style="animation-delay: 2.4s">h</span
+            ><span class="letter-pop" style="animation-delay: 2.45s">e</span
             ><span class="letter-pop" style="animation-delay: 2.5s">&nbsp;</span
-            ><span class="letter-pop" style="animation-delay: 2.55s">o</span
-            ><span class="letter-pop" style="animation-delay: 2.6s">p</span
-            ><span class="letter-pop" style="animation-delay: 2.65s">e</span
-            ><span class="letter-pop" style="animation-delay: 2.7s">n</span
-            ><span class="letter-pop" style="animation-delay: 2.75s"
-              >&nbsp;</span
-            ><span class="letter-pop" style="animation-delay: 2.8s">s</span
-            ><span class="letter-pop" style="animation-delay: 2.85s">o</span
-            ><span class="letter-pop" style="animation-delay: 2.9s">o</span
-            ><span class="letter-pop" style="animation-delay: 2.95s">n</span
-            ><span class="letter-pop" style="animation-delay: 3s">.</span
-            ><span class="letter-pop" style="animation-delay: 3.05s">.</span
-            ><span class="letter-pop" style="animation-delay: 3.1s">.</span>
+            ><span class="letter-pop" style="animation-delay: 2.55s">v</span
+            ><span class="letter-pop" style="animation-delay: 2.6s">a</span
+            ><span class="letter-pop" style="animation-delay: 2.65s">l</span
+            ><span class="letter-pop" style="animation-delay: 2.7s">l</span
+            ><span class="letter-pop" style="animation-delay: 2.75s">e</span
+            ><span class="letter-pop" style="animation-delay: 2.8s">y</span
+            ><span class="letter-pop" style="animation-delay: 2.85s">!</span>
           </p>
 
           <!-- Discord Link -->
