--- a/index.html
+++ b/index.html
@@ -554,19 +554,31 @@
 
         <!-- Footer -->
         <footer class="text-center space-y-6">
-          <button
-            disabled
-            class="relative inline-flex items-center gap-4 px-20 py-7 rounded-full text-xl font-semibold tracking-wide cursor-not-allowed overflow-hidden shadow-[0_12px_48px_rgba(139,123,168,0.5)] border-2 border-valley-purple/50"
+          <a
+            href="https://dev.lofivalley.com/"
+            class="relative inline-flex items-center gap-4 px-20 py-7 rounded-full text-xl font-semibold tracking-wide overflow-hidden shadow-[0_12px_48px_rgba(139,123,168,0.7)] border-2 border-valley-lavender/60 transition-all duration-300 hover:scale-105 hover:shadow-[0_16px_64px_rgba(139,123,168,0.9)]"
+            style="
+              background: linear-gradient(
+                135deg,
+                #8b7ba8 0%,
+                #b5a5c9 50%,
+                #a8c5a5 100%
+              );
+            "
           >
-            <span class="relative z-10 text-valley-cream/70">✦</span>
-            <span class="relative z-10 text-valley-cream/70">
+            <span class="relative z-10 text-valley-cream drop-shadow-lg"
+              >✦</span
+            >
+            <span class="relative z-10 text-valley-cream drop-shadow-lg">
               Entrar al valle
             </span>
-            <span class="relative z-10 text-valley-cream/70">✦</span>
-          </button>
+            <span class="relative z-10 text-valley-cream drop-shadow-lg"
+              >✦</span
+            >
+          </a>
 
           <p class="text-sm text-valley-sand/60 tracking-[0.3em] uppercase">
-            Las puertas abrirán pronto...
+            ¡Bienvenido al valle!
           </p>
 
           <!-- Discord Link -->
